fossil noticed by pmurias++
git-svn-id: http://svn.pugscode.org/pugs@23963 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -2119,7 +2119,7 @@ you can override that by calling C<make> inside a regex:
 
     my $moose = $(m:{
         <antler> <body>
-        { make Moose.new( body => $body().attach($antler) ) }
+        { make Moose.new( body => $<body>.attach($<antler>) ) }
         # match succeeds -- ignore the rest of the regex
     });
 
