* AUTHORS:   Adding myself as per kolibrie's suggestion to check if I can commit
git-svn-id: http://svn.pugscode.org/pugs@20009 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -181,6 +181,7 @@ Piers "pdcawley" Cawley          (PDCAWLEY)
 Rafael "rgs" Garcia-Suarez       (RGARCIA)   Rafaël Garcia-Suarez
 Ran Eliam i                      (EILARA)
 Randal L. Schwartz               (MERLYN)
+Richard Hartmann                 (RICHIH)
 Richard "crysflame" Soderberg    (RSOD)
 Rob Hoelz
 Rob "dragonchild" Kinyon         (RKINYON)
